2002-09-16  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): check if selection
	contains link before including remove link
	(prepare_properties_and_menu): always include "Insert link" menu
	item

2002-09-12  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove GTK_DISABLE_DEPRECATED definition for the
	benefit of gal2 (will be removed when gal stops having references to
	GtkCList in gal/widgets/e-unicode.h)

2002-08-22  Radek Doulik  <rodo@ximian.com>

	* menubar.c (file_dialog_ok): convert from locale to utf8

2002-08-21  Radek Doulik  <rodo@ximian.com>

	* menubar.c (indent_more_cb): removed properties menu item as it
	doesn't play nice with evo. now clients have to call capplet or
	provide own settings if needed

2002-06-06  Radek Doulik  <rodo@ximian.com>

	* menubar.c: added insert text/html file items and implemented
	them

2002-05-28  Radek Doulik  <rodo@ximian.com>

	* menubar.c (menubar_update_format): take care of smiley menuitems

	* GNOME_GtkHTML_Editor.xml.in: fix typo

2002-05-22  Radek Doulik  <rodo@ximian.com>

	* menubar.c (paragraph_style_cb): don't set style if
	block_font_style_change

2002-05-08  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: moved lists before hedings

	* toolbar.c: moved lists before hedings

2002-05-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: use versioned libraries

2002-05-06  Radek Doulik  <rodo@ximian.com>

	* spell.c (spell_check_word): check just for SYSTEM exception
	(fill_suggestion_clist): ditto

2002-03-26  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): sink menu if it doesnt
	contains any items, return NULL in such case

2002-03-25  Radek Doulik  <rodo@ximian.com>

	* test-html-editor-control.c (app_destroy_cb): use
	bonobo_main_quit

2002-03-15  Radek Doulik  <rodo@ximian.com>

	* editor-control-factory.c: use EDITOR_API_VERSION

	* Makefile.am: added install-exec-hook to rename component binary
